# nengo-autograd

./: .nengobones.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/examples/advanced/: functions-and-tuning-curves.ipynb  inhibitory-gating.ipynb  izhikevich.ipynb  matrix-multiplication.ipynb  nef-summary.ipynb  processes.ipynb
docs/examples/basic/: 2d-representation.ipynb  combining.ipynb  communication-channel.ipynb  many-neurons.ipynb  multiplication.ipynb  single-neuron.ipynb  squaring.ipynb  two-neurons.ipynb
docs/examples/dynamics/: controlled-integrator.ipynb  controlled-integrator2.ipynb
docs/examples/learning/: learn-associations.ipynb  learn-communication-channel.ipynb  learn-product.ipynb  learn-square.ipynb  learn-unsupervised.ipynb
docs/examples/networks/: basal-ganglia.ipynb  ensemble-array.ipynb
docs/examples/usage/: delay-node.ipynb  rectified-linear.ipynb  tuning-curves.ipynb
nengo/: base.py  cache.py  connection.py  dists.py  neurons.py  node.py  params.py  processes.py  rc.py  simulator.py  solvers.py  synapses.py  transforms.py
nengo/_vendor/scipy/sparse/: linalg_expm.py  linalg_interface.py  linalg_onenormest.py  sputils.py
nengo/builder/: builder.py  connection.py  ensemble.py  learning_rules.py  network.py  neurons.py  operator.py  optimizer.py  processes.py  signal.py  transforms.py
nengo/builder/tests/: test_connection.py  test_neurons.py  test_operator.py  test_optimizer.py  test_processes.py  test_signal.py  test_transforms.py  test_transforms_conv.py
nengo/networks/: actionselection.py  assoc_mem.py  circularconvolution.py  ensemblearray.py  product.py  workingmemory.py
nengo/networks/tests/: test_actionselection.py  test_assoc_mem.py  test_circularconv.py  test_ensemblearray.py  test_product.py
nengo/spa/: action_build.py  basalganglia.py  buffer.py  compare.py  cortical.py  pointer.py  spa.py  state.py  thalamus.py  utils.py  vocab.py
nengo/spa/tests/: test_assoc_mem.py  test_bind.py  test_buffer.py  test_cortical.py  test_input.py  test_memory.py  test_pointer.py  test_state.py  test_thalamus.py  test_vocabulary.py
nengo/tests/: test_cache.py  test_connection.py  test_copy.py  test_dists.py  test_ensemble.py  test_learning_rules.py  test_neurons.py  test_node.py  test_params.py  test_presets.py  test_probe.py  test_processes.py  test_reprs.py  test_simulator.py  test_solvers.py  test_synapses.py  test_transforms.py  test_transforms_conv.py
nengo/utils/: builder.py  connection.py  ensemble.py  filter_design.py  ipython.py  least_squares_solvers.py  matplotlib.py  nco.py  numpy.py  progress.py  testing.py
nengo/utils/tests/: test_builder.py  test_connection.py  test_ensemble.py  test_filter_design.py  test_least_squares_solvers.py  test_matplotlib.py  test_nco.py  test_numpy.py  test_simulator.py  test_stdlib.py  test_testing.py
