[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Nengo"
version = "4.1.1"
description = "Tools for building and simulating large-scale neural models"
authors = [{name = "Nengo Developers", email = "terry.stewart@gmail.com"}]
license = {text = "GPL-2.0-only"}
readme = "README.rst"  # adjust if different
requires-python = ">=3.6"
dependencies = [
    "autograd[scipy]>=1.6.2",
    "numpy>=1.19",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Nengo",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
docs = [
    "sphinx>=1.8",
    "jupyter",
    "matplotlib>=1.4",
    "nbsphinx",
    "numpydoc>=0.6",
    "nengo_sphinx_theme>=1.2.0",
]
optional = [
    "scipy>=0.13",
    "scikit-learn",
]
test = [
    "jupyter",
    "matplotlib>=1.4",
    "pytest>=3.9.1",
    "pytest-allclose",
    "pytest-plt",
    "pytest-rng",
]

[project.entry-points."nengo.backends"]
reference = "nengo:Simulator"

[project.entry-points.pytest11]
nengo = "pytest_nengo"

[tool.setuptools]
include-package-data = true
py-modules = ["pytest_nengo"]

[tool.setuptools.package-data]
nengo = [
    "*.md",
    "*.rst",
    "*.txt",
    "*.npz",
    "nengo-data/nengorc",   # from package_data in setup_py
]
# The following lines from the original manifest_in should be included in a MANIFEST.in file:
# graft nengo-data
# recursive-include nengo *.md
# recursive-include nengo *.rst
# recursive-include nengo *.txt
# recursive-include nengo *.npz

[tool.black]
extend-exclude = "_vendor/"

[tool.codespell]
ignore-words-list = [
    "bu",
    "inh",
]

[tool.coverage.run]
omit = [
    "/tmp/pytest-*",
    "*/_vendor/*",
    "*/version.py",
    "*/spa/*",
    "nengo/utils/filter_design.py",
]

[tool.coverage.report]
exclude_lines = [
    "^[ \\t]*assert False",
]

[tool.flake8]
exclude = [
    "compat.py",
    "nengo/_vendor",
]

[tool.pytest.ini_options]
norecursedirs = [
    "plots",
    "nengo/_vendor",
]
filterwarnings = [
    'always',
    'ignore::ImportWarning',
    'ignore:(Buffer|Memory|The nengo\\.spa):DeprecationWarning',
    'ignore:Skipping some optimization steps',
    'ignore:SciPy is not installed',
    'ignore:numpy.(dtype|ufunc) size changed',
    'ignore:Object <BasalGanglia "bg"> has already been built',
    'ignore:Object <Thalamus "thalamus"> has already been built',
    'ignore:IPython.core.inputsplitter is deprecated',
    "ignore:'step_math' has been renamed",
]
plt_filename_drop = [
    '^nengo\\.',
    'tests\\.',
]

[tool.pylint]
ignore = [
    "_vendor",
    "compat.py",
    "spa",
]
disable = [
    "missing-docstring",
    "redefined-outer-name",
]
known_third_party = [
    "mpl_toolkits",
    "pytest_allclose",
]
